# gifi-predict

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/agents/: gifi-acceptance-engineer.md  gifi-domain-specialist.md  gifi-ingest-engineer.md  gifi-simulation-engineer.md  react-frontend-architect.md
.cursor/rules/: gifi-agents.mdc
analytics/: forecast_tsa_operacional.py  train_tsa_primeira_base.py
base/: primeira_base.csv
config/: acceptance.yaml  ingest.yaml  serving.docker.yaml  serving.yaml  serving_release_manifest.yaml  simulation.yaml
config/acceptance_scenarios/: anchor_mixed.yaml  tc03.yaml  tc03_baseline_mild.yaml  tc05.yaml  tc05_baseline_tpc65.yaml  tc09_tpc.yaml  tc10_stress.yaml  tm01.yaml  tm02.yaml  tm03.yaml  tm04.yaml  tm05.yaml
data/tmp/: qm_part01_modo_a.csv
database/serving_audit/: 001_init.sql
datasets/: qm_processo_part_01.csv  qm_processo_part_02.csv  qm_processo_part_03.csv  qm_processo_part_04.csv  qm_processo_part_05.csv
docs/: CASOS_TESTE_FUNCIONAIS_GIFI_v1.1.md  CHANGELOG.md  PRD_GIFI_v1.1.md  RESUMO_TECNICO_GIFI_v1.1.md
docs/adr/: ADR-003-manifest-vs-mlflow.md
docs/analysis/: DIAGNOSTICO_MAE_ELO3.md  GAP_INGEST_ENGINE_FONTES.md  IMPUTACAO_EXTRATIVO_AT.md  RELATORIO_DADOS_ENGENHARIA_VARIAVEIS.md
docs/api/: DICIONARIO_DADOS_FORECAST_PREDICT_TSA.md  DICIONARIO_DADOS_SERVING_CENARIOS.md  GAPS_UI_E_VALIDACAO.md  README.md
docs/diagrams/: INGEST_ENGINE.md
docs/guides/: AZURE_APP_SERVICE_REQUISITOS.md  (+3 more)
excels/: Base de dados QM x Processo 2018-2025_consolidado(Dados).xlsx
graphics/: agentspec_analytical_backbone_kb_agentes.html  agentspec_backbone_reanalise_kb_agentes.html  agentspec_ingest_engine_kb_agentes.html  reanalise_ingest_cobertura.html
reports/: TSA_FORECAST_OPERACIONAL.json  TSA_FORECAST_OPERACIONAL.md  TSA_PRIMEIRA_BASE_MODELING.json  TSA_PRIMEIRA_BASE_MODELING.md  VALIDACAO_IMPUTER_EXTRATIVO.md
scripts/: audit_query.py  backfill_extrativo_l2.py  build_primeira_base.py  dev_ui.sh  export_extrativo_serving_imputer.py  pack_serving_release.py  setup_dev.sh  smoke_serving_docker.sh  validate_extrativo_imputer.py
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+330 files in other folders)
