[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gifi-predict"
version = "0.3.0"
description = "GIFI Predict — Ingest (L2), Simulation (L3), Acceptance Gate (L4) e Web UI (L5)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "openpyxl>=3.1",
    "typer>=0.12",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "shap>=0.44",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
]

[project.scripts]
ingest = "ingest.cli:app"
simulate = "simulation.cli:app"
accept = "acceptance.cli:app"
serve = "serving.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: integration tests with real Excel",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.coverage.run]
source = ["ingest", "simulation", "acceptance", "serving"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_empty = true
